updated java backend and frontend